Revision history for {{$dist->name}}

{{$NEXT}}

0.04      2014-06-10 12:48:25 -0400
  - fix test failure when HTTP::Tiny is not installed

0.03      2014-06-10 09:41:05 -0400
  - fix version for Alien::MSYS

0.02      2014-06-10 06:09:09 -0400
  - added alien option for system_install
  - keep symbolic links as symbolic links when copy to dll directory

0.01      2014-06-09 16:46:04 -0400
  - initial version