@@ -1,7 +1,12 @@
 use strict;
 use warnings;
-use Test::More tests => 1;
+use Test::More;
 use Alien::Libarchive::Installer;
+
+plan skip_all => 'test requires HTTP::Tiny'
+  unless eval { require HTTP::Tiny };
+
+plan tests => 1;
 
 my @versions = eval { Alien::Libarchive::Installer->versions_available };
 diag $@ if $@;
